control with one or two buttons

--- a/Homework05/Makefile
+++ b/Homework05/Makefile
@@ -5,13 +5,23 @@ CFLAGS  := -O3 -g
 #
 # Programs
 #
-all:	gpiotest gpioToggle
+all:	gpiotest gpioToggle controlLED 
 
 gpiotest:  gpiotest.c beaglebone_gpio.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
 
 gpioToggle:  gpioToggle.c beaglebone_gpio.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
+
+controlLED:  controlLED.o beaglebone_gpio.h gpio-utils.o
+	gcc -o controlLED controlLED.o beaglebone_gpio.h gpio-utils.o
+
+controlLED.o: controlLED.c gpio-utils.o
+	gcc -c controlLED.c
+
+gpio-utils.o: gpio-utils.c gpio-utils.h
+	gcc -c gpio-utils.c
+
 
 #
 # Objects
